<resources>
    <string name="app_name">Kemifra Doctor V1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_picture">welcome picture</string>
    <string name="services">Our Services</string>
    <string name="hello_customer">Hello Customer</string>
    <string name="price">Prices</string>
    <string name="title">Title</string>
    <string name="category_image">category image</string>
    <string name="description">description</string>
    <string name="title_activity_category_content">CategoryContent</string>
    <string name="title_activity_read">ReadActivity</string>
    <string name="testimony">Testimony</string>
    <string name="home">Home</string>

    <string name="title_activity_image">ImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close">Close</string>
    <string name="title_activity_simple_image_viewer">SimpleImageViewer</string>

    <string name="delete_action">delete action</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="mada_mpya">Maelezo…</string>
    <string name="mada_mpya_title">Mada…</string>
    <string name="clock_time">12:52</string>
    <string name="jina">Jina</string>
    <string name="barupepe">Barupepe</string>
    <string name="chami_epimark">Chami epimark</string>
    <string name="title_activity_sign_in">Profile</string>
    <string name="profile">Profile</string>
    <string name="title_activity_my_chat">MyChatActivity</string>
    <string name="message">Message…</string>
    <string name="dummy_text">Before using the application ypu must sign in. Provide your mobile number and
        address then click the button below. For privacy policy visit:
        https://www.freeprivacypolicy.com/privacy/view/43808ba654840f1665a492d5e2ee0f11
    </string>
    <string name="buble_image">buble_image</string>
    <string name="topic">Topic</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="name">Joshua Mshana</string>
    <string name="email_example_com">email@example.com</string>
    <string name="subscription">Subscription</string>
    <string name="type">Type</string>
    <string name="free">Free</string>
    <string name="update">Update Profile</string>
    <string name="tsz_0">TZS 0</string>
    <string name="status">Status</string>
    <string name="expire">Account expire</string>
    <string name="pay">Pay</string>
    <string name="pay_history">Receipts</string>
    <string name="logout">Logout</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="sigin_up_image">sigin up image</string>
    <string name="term_and_conditions">Terms And Conditions</string>
    <string name="agree_and_sign_in">Agree And Sign In</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_receipts">ReceiptsActivity</string>
    <string name="tzs">TZS</string>
    <string name="tz">TZ</string>
    <string name="_10000">0</string>
    <string name="monthly">Monthly</string>
    <string name="six_monthly">Six Month(50,000TZ)</string>
    <string name="twelve_monthly">Year(100,000TZ)</string>
    <string name="one_monthly">Month(10,000TZ)</string>
    <string name="title_activity_forum_image_viwer">ForumImageViwer</string>
    <string name="account_expire">Account Expire</string>
    <string name="vip">VIP</string>
    <string name="premium">Your account is premium</string>
    <string name="pay_instruction">TUMA PESA KWENDA NAMBA 0764943055 (JOSHUA MSHANA) KISHA WEKA NAMBA YAKO YA SIMU ULIYOTUMIA KUTUMA PESA NA UJUMBE WA UTHIBITISHO UKIFUTA MANENO YANAYOONYESHA KIASI CHAKO KILICHOBAKIA</string>
    <string name="confirm">Confirm</string>
    <string name="pay_confirm">KUMALIZA MALIPO PIGA SIMU AU TUMA SMS KWENDA 0764943055</string>
    <string name="call">Call</string>
    <string name="action_new_article">New Article</string>
    <string name="action_new_testimony">New Testimony</string>
    <string name="action_delete_article">Delete Article</string>
    <string name="action_delete_testimony">Delete Testimony</string>
    <string name="action_new_category">New Category</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="cat_title">Name</string>
    <string name="cat_description">Description</string>
    <string name="cat_image">Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="new_category_image">New category image</string>
    <string name="title_activity_testimony">TestimonyActivity</string>
    <string name="upload">Upload</string>
    <string name="new_article">New Article</string>

    <string name="default_web_client_id" translatable="false">1040903580466-cms8p4kqes0f4nau968ljmhsvi4sipnf.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://doctor-fahamutech.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">1040903580466</string>
    <string name="google_api_key" translatable="false">AIzaSyDqob6T4rD95zrYpVoddTtfxt-zZgHuYhg</string>
    <string name="google_app_id" translatable="false">1:1040903580466:android:e09156f8710fd141</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyDqob6T4rD95zrYpVoddTtfxt-zZgHuYhg</string>
    <string name="google_storage_bucket" translatable="false">doctor-fahamutech.appspot.com</string>
    <string name="project_id" translatable="false">doctor-fahamutech</string>

</resources>
