<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cat_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/category_image"
            android:scaleType="centerCrop"
            android:src="@drawable/martin_doc" />

        <TextView
            android:id="@+id/cat_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <TextView
            android:id="@+id/cat_subtitle"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>
</android.support.v7.widget.CardView>