<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nathan"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fahamutech.adminapp.forum.SignUpActivity"
    tools:showIn="@layout/forum_activity_sign_up">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/term_and_conditions"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/siginup_privacy"
                android:autoLink="web"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/siginup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_forum_call"
                    android:drawableStart="@drawable/ic_forum_call"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/siginup_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_forum_add_location"
                    android:drawableStart="@drawable/ic_forum_add_location"
                    android:gravity="start"
                    android:visibility="gone"
                    android:text="@string/address"
                    android:hint="@string/address"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/siginup"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>