<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:src="@mipmap/test"
                    app:civ_border_color="#FFf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/post_title"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/post_title"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/post_description"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/post_description"
                        android:textColor="@color/dark_gray" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/forum_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/clock_time"
                android:textColor="@color/colorPrimary" />

            <View
                android:id="@+id/forum_topic_new"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignEnd="@+id/forum_time"
                android:layout_alignRight="@+id/forum_time"
                android:layout_below="@id/forum_time"
                android:layout_marginTop="12dp"
                android:background="@drawable/circle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="70dp"
            android:background="@color/gray" />

    </LinearLayout>


</androidx.cardview.widget.CardView>
